Adicionando aba Descartar

--- a/index.html
+++ b/index.html
@@ -109,14 +109,15 @@
         <div class="footer_text">
             Vamos Transformar o Mundo Juntos?
         </div>
-        <div class="contact_form">
+        <div class="contact_form" id="contactForm">
             <label for="name">Solicite seu contato</label>
             <input type="text" id="name" name="name" placeholder="Nome">
             <input type="text" id="email" name="email" placeholder="Email">
             <input type="text" id="phone" name="phone" placeholder="Telefone">
-            <button type="submit">Enviar</button>
+            <button type="button" id="submitButton">Enviar</button>
         </div>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
